--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,6 @@ python-dotenv==1.0.1
 Pillow==10.4.0
 
 # PostgreSQL database adapter
-# psycopg2-binary==2.9.9
+psycopg2-binary==2.9.9
 
 gunicorn
